@@ -1,10 +1,18 @@
-/sbin/mount_std		/sbin/mount_devfs
-/sbin/mount_std		/sbin/mount_fdescfs
-/sbin/mount_std		/sbin/mount_linprocfs
-/sbin/mount_std		/sbin/mount_procfs
+/sbin/mount_std				/sbin/mount_devfs
+/usr/share/man/man8/mount_std.8.gz	/usr/share/man/man8/mount_devfs.8.gz
+/sbin/mount_std				/sbin/mount_fdescfs
+/usr/share/man/man8/mount_std.8.gz	/usr/share/man/man8/mount_fdescfs.8.gz
+/sbin/mount_std				/sbin/mount_linprocfs
+/usr/share/man/man8/mount_std.8.gz	/usr/share/man/man8/mount_linprocfs.8.gz
+/sbin/mount_std				/sbin/mount_procfs
+/usr/share/man/man8/mount_std.8.gz	/usr/share/man/man8/mount_procfs.8.gz
 
-/sbin/mount_ext2fs	/sbin/mount_ext2
-/sbin/mount_ext2fs	/sbin/mount_ext3
+/sbin/mount_ext2fs			/sbin/mount_ext2
+/usr/share/man/man8/mount_ext2fs.8.gz	/usr/share/man/man8/mount_ext2.8.gz
+/sbin/mount_ext2fs			/sbin/mount_ext3
+/usr/share/man/man8/mount_ext2fs.8.gz	/usr/share/man/man8/mount_ext3.8.gz
 
-/sbin/swapon		/sbin/swapoff
-/sbin/swapon		/sbin/swapctl
+/sbin/swapon				/sbin/swapoff
+/usr/share/man/man8/swapon.8.gz 	/usr/share/man/man8/swapoff.8.gz
+/sbin/swapon				/sbin/swapctl
+/usr/share/man/man8/swapon.8.gz 	/usr/share/man/man8/swapctl.8.gz
