@@ -2,8 +2,8 @@ Template: kbdcontrol/keymap
 Type: select
 Choices: none, @choices@
 Default: none
-Description: Select keyboard map:
- Select a map file for your keyboard.
+Description: Keymap:
+ You can choose a keymap in the list.
  .
  Note: If you don't know, don't select any yet.  You can always come back to
  this question with "dpkg-reconfigure kbdcontrol".
