@@ -1,0 +1,2 @@
+build-tree/src/sbin/ifconfig/ifconfig.8
+build-tree/src/sbin/route/route.8
