@@ -4,6 +4,7 @@ freebsd-utils (6.1-2) unreleased; urgency=low
   * module-init-tools: don't conflict (only replace), so that apt 
     is able to resolve the dependency loop.
   * Add manpages.
+  * Enable net-tools.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue,  7 Nov 2006 19:01:10 +0100
 
